# S107-TRABALHO

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  main.yml
scripts/: enviar_email.py  send_email.py
src/: __init__.py  aluno.py
src/projetos107/: aula.py  professor.py
tests/: __init__.py  test_aula.py
