[tool.poetry]
name = "projetos107"
version = "0.1.0"
description = ""
authors = ["Arthur521 <arthurassis@hotmail.com.br>"]
readme = "README.md"
packages = [{include = "projetos107", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
